[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
socket2 = "0.5.5"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["net"] }
chrono = "0.4"